--- a/Curs08/Ex04/css/style.css
+++ b/Curs08/Ex04/css/style.css
@@ -1,4 +1,39 @@
 .container {
-  border: 1px solid #000; 
+  border: 1px solid #000;
   padding: 5px;
+}
+.nav-top {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: black;
+}
+.nav-top a {
+  color: white;
+}
+.legend {
+  position: absolute;
+  background-color: gray;
+  border: 1px solid red;
+  top: -1px;
+}
+.container {
+  position: relative;
+}
+.sub {
+  position: relative;
+  font-size: 12px;
+  bottom: -2px;
+}
+.nav-bottom {
+  position: fixed;
+  background-color: green;
+  left: 0px;
+  bottom: 0px;
+  z-index: 1;
+  color: white;
+}
+.nav-bottom a {
+  color: white;
+  text-decoration: none;
 }
