--- a/Curs09/Ex01/css/style.css
+++ b/Curs09/Ex01/css/style.css
@@ -1,3 +1,17 @@
-ul, ol {
+ul,
+ol {
   list-style-type: none;
+}
+.para {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  display: block;
+}
+ol li {
+  display: inline-block;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+.para-span {
+  display: inline-block;
 }
