--- a/Curs08/Ex03/css/style.css
+++ b/Curs08/Ex03/css/style.css
@@ -18,3 +18,44 @@
   padding-left: 13px;
   padding-right: 21px;
 }
+.container {
+  padding: 15px;
+  border: 3px solid green;
+}
+.green {
+  background-color: green;
+  width: 500px;
+  height: 220px;
+  border: 1px solid black;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  padding-right: 19px;
+  padding-left: 19px;
+  margin: 0 auto;
+}
+.purple {
+  background-color: purple;
+  border: 2px solid green;
+  border-radius: 40px;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  padding-right: 15px;
+  padding-left: 20px;
+}
+.turquoise {
+  background-color: turquoise;
+  border: 1px solid blue;
+  border-radius: 15px;
+  padding-left: 20px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-right: 20px;
+}
+.transparent {
+  width: 300px;
+  border: 2px solid red;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
