--- a/Curs08/Ex05/css/style.css
+++ b/Curs08/Ex05/css/style.css
@@ -1,4 +1,34 @@
 .container {
-  border: 1px solid #000; 
+  border: 1px solid #000;
   padding: 5px;
+}
+.nav-bottom {
+  bottom: 0px;
+  right: 0px;
+  background-color: blue;
+  z-index: 1;
+  color: brown;
+  position: absolute;
+}
+.nav-bottom a {
+  color: brown;
+}
+.legend {
+  position: absolute;
+  background-color: gray;
+  border: red;
+}
+.container {
+  position: relative;
+}
+.sup {
+  position: relative;
+  top: 1px;
+}
+.nav-top {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: green;
+  z-index: 1;
 }
