--- a/Curs09/Ex02/css/style.css
+++ b/Curs09/Ex02/css/style.css
@@ -10,8 +10,8 @@
 
 .stage .title {
   position: absolute;
-  top: 5px; 
-  right: 5px
+  top: 5px;
+  right: 5px;
 }
 
 .item {
@@ -20,4 +20,31 @@
   background: #000;
   border: 1px solid red;
 }
-
+.stage-01 {
+  justify-content: center;
+  align-items: center;
+}
+.stage-02 {
+  align-items: flex-end;
+  justify-content: center;
+}
+.stage-03 {
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.stage-04 {
+  justify-content: flex-end;
+  align-items: center;
+}
+.stage-05 {
+  justify-content: space-around;
+  align-items: center;
+}
+.stage-06 {
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.stage-07 {
+  justify-content: space-around;
+  align-items: flex-start;
+}
