--- a/Curs09/Ex04/css/style.css
+++ b/Curs09/Ex04/css/style.css
@@ -23,4 +23,18 @@
 .box-yellow {
   background-color: yellow;
 }
-
+.box-red {
+  transform: rotate(-30deg);
+}
+.box-green {
+  transform: translateX(25px) translateY(100px);
+}
+.box-purple {
+  transform: translateX(100px) rotate(50deg);
+}
+.box-brown {
+  transform: skew(10deg, 10deg) translateX(-10px) translateY(5px);
+}
+.box-yellow {
+  transform: scale(1.2) rotate(-15deg);
+}
